Screen shots of processes

--- a/app/src/main/res/layout-v26/include_job_appbar.xml
+++ b/app/src/main/res/layout-v26/include_job_appbar.xml
@@ -28,6 +28,7 @@
                 android:layout_gravity="start|center_vertical"
                 android:contentDescription="@string/signed_in_account"
                 android:padding="@dimen/appbar_icon_padding"
+                android:src="@drawable/ic_account_circle"
                 app:img_uri="@{viewModel.currentUserPhotoUri}"
                 app:srcCompat="@drawable/ic_account_circle" />
 
